2008-03-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	fixed an small memory leak and set the proper error code when a
	get_msg fails due to full memory conditions in the local storage.

2008-03-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Made tny_folder_transfer_msgs_async cancellable

2008-03-17  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
	(message_from_data): don't free the message before evaluating
	headers. Also take into account the case we get ms has attachments but
	we don't have priority flag, for avoiding using heuristics.

2008-03-16  Philip Van Hoof <pvanhoof@gnome.org>

	* Added extra insurance that an INBOX folder will be present

2008-03-13  Philip Van Hoof <pvanhoof@gnome.org>

	* IMAP provider: bugfix when asking for a list of folders that has no
	subfolders, on Cyrus.

2008-03-12  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-gnome-desktop/tny-gnome-device.c:
	(tny_gnome_device_is_online) if we try to get the network
	state and find that the network manager context is invalid,
	we shutdown it AND after this we nullify the context
	reference.

2008-03-12  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* Reverted the "Leave on disk, MIME parsing" patch, as it's
	causing serious problems.

2008-03-11  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c:
	Now poke_status only tries to do the job if folder is
	connected/active. Should prevent getting lots of attempts to
	connect in queue that have to be finished later.

2008-03-07  Jose Dapena Paz  <jdapena@igalia.com>

	* tests/c-demo/tny-demoui-summary-view.c:
	Added a simple syntax to provide different parent folders
	in rename/copy operation. Now you can provide
	paths as "/newfolder", "../another-parent/folder", etc.

2008-03-06  Alberto Garcia Gonzalez <agarcia@igalia.com>
